# SI-Calculator

./: .envexample  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  vercel.json
calculator_api/: constants.py  serializers.py  urls.py  utils.py  views.py
calculator_api/tests/: test_api.py  test_serializers.py  test_utils.py
core/: settings.py  urls.py  wsgi.py
core/config/: logging_config._backup.py  logging_config.py
frontend_ui/: views.py
frontend_ui/templates/frontend_ui/: calculator_form.html  index.html  instruments.html
