[project]
name = "si-calculator"
version = "0.1.0"
description = "Risk calculator for Deriv synthetic indices."
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "Django==5.2.3",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.0",
    "python-decouple==3.8",
]

[dependency-groups]
dev = [
    "django-stubs==5.2.7",
    "django-stubs-ext==5.2.7",
    "djangorestframework-stubs==3.16.5",
    "mypy==1.18.2",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_tests.py"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
strict_equality = true
warn_return_any = true
no_implicit_optional = true
exclude = ["(^manage\\.py$|migrations/)"]

[[tool.mypy.overrides]]
module = ["decouple.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["calculator_api.tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.django-stubs]
django_settings_module = "core.settings"
